# redup

./: .gitignore  .jscpd.json  1.md  2.md  3.md  BUGFIX_SUMMARY.md  CHANGELOG.md  COMPLEXITY_REDUCTION_COMPLETE.md  CONTINUATION_PLAN.md  MEMORY_OPTIMIZATION.md  PERFORMANCE.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  REFACTORING_SUMMARY.md  SPRINT_2_PLAN.md  SUMD.md  SUMR.md  TODO.md  TODO_github.md  TODO_gitlab.md  Taskfile.yml  app.doql.css  app.doql.less  benchmark.py  cli_utilities_demo.py  compare_report.json  compare_report_test.json  complexity_reduction_plan.md  coverage.json  goal.yaml  index.html  local.dev.txt  planfile.yaml  project.sh  proxy_refactoring_plan.md  pyproject.toml  pyqual.yaml  redup.toml  refactored_frontend_demo.py  test_fuzzy_similarity.py  (+1 more)
.redup/cache/: hash_cache.db
benchmarks/: bench_libraries.py
code2llm_output/: README.md  analysis.toon  context.md
docs/: API.md  PLANFILE_INTEGRATION_TESTING.md  README.md
examples/: 01_basic_usage.py
project/: README.md  analysis.json  analysis.toon  analysis.toon.yaml  analysis.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  dashboard.html  duplication.json  duplication.toon  duplication.toon.toon  duplication.toon.yaml  duplication.yaml  evolution.toon  evolution.toon.yaml  evolution.yaml  flow.mmd  flow.toon  index.html  logic.pl  map.toon  map.toon.yaml  map.yaml  mermaid.export  pfix-report.json  planfile-tickets.yaml  project.toon  project.toon.yaml  project.yaml  prompt.txt  toon.toon.yaml  toon.yaml  validation.toon  validation.toon.yaml  validation_fixed.toon
project/root/: analysis.toon.yaml  context.md  evolution.toon.yaml
project/src_benchmarks_examples/: context.md
proxy_analysis/: duplication.json  duplication.toon  duplication.yaml
redup_self_analysis/: duplication.json
scripts/: jscpd-check.sh  jscpd-run.sh  redup-run.sh
src/: sitecustomize.py
src/redup/: __init__.py  __main__.py  analysis_logic.py  config.py  config_handler.py  mcp_server.py  reporters.py  utils.py
src/redup/cli_app/: __init__.py  compare_command.py  config_builder.py  fuzzy_similarity.py  intract_commands.py  main.py  output_writer.py  quality_commands.py  scan_commands.py  scan_helpers.py  tasks_command.py
src/redup/core/: __init__.py  cache.py  classifier.py  community.py  comparator.py  config.py  decision.py  differ.py  fuzzy_similarity.py  grouper.py  hash_cache.py  hasher.py  lazy_grouper.py  lsh_matcher.py  matcher.py  matcher.py.bak  memory_scanner.py  models.py  parallel_scanner.py  pipeline.py  pipeline.py.bak  pipeline_utils.py  planner.py  planner.py.bak  python_parser.py  refactor_advisor.py  scanner.py  scanner.py.bak  scanner_cache.py  scanner_cache.py.bak  scanner_filters.py  scanner_loader.py  scanner_models.py  scanner_types.py  scanner_utils.py  semantic.py  ts_extractor.py  ultra_fast_scanner.py  universal_fuzzy.py
src/redup/core/pipeline/: __init__.py  duplicate_finder.py  groups.py  phases.py
src/redup/core/scanner/: __init__.py
src/redup/core/ts_extractor/: __init__.py  config.py  dispatcher.py  main.py
src/redup/core/ts_extractor/extractors/: __init__.py  base.py  c_family.py  dotnet.py  markup.py  php.py  query.py  ruby.py  shell.py  stylesheet.py  web.py
src/redup/core/utils/: __init__.py  diff_helpers.py  duplicate_finders.py  function_extractor.py  hash_utils.py  language_dispatcher.py
src/redup/integrations/: __init__.py  planfile_integration.py
src/redup/integrations/intract/: __init__.py  adapter.py  policy.py
src/redup/mcp/: __init__.py  handlers.py  schemas.py  server.py  utils.py
src/redup/reporters/: __init__.py  code2llm_reporter.py  enhanced_reporter.py  json_reporter.py  markdown_reporter.py  toon_reporter.py  yaml_reporter.py
testql-scenarios/: generated-cli-tests.testql.toon.yaml  generated-from-pytests.testql.toon.yaml
tests/: test_classifier.py  test_cli_import_compat.py  test_compare.py  test_e2e.py  test_hasher.py  test_intent_integration.py  test_matcher.py  test_mcp_server.py  test_models.py  test_pipeline.py  test_planfile_integration.py  test_planner.py  test_quality_commands.py  test_reporters.py  test_scanner.py  test_semantic.py  test_semantic_benchmark.py  test_ts_extractor.py
toon/: validation.txt
