[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redup"
version = "0.4.4"
description = "Code duplication analyzer and refactoring planner for LLMs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Tom Sapletta", email = "tom@sapletta.com" },
]
keywords = ["duplication", "refactoring", "code-analysis", "LLM", "AST", "static-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
all = [
    "redup[fast]",
    "redup[fuzzy]",
    "redup[ast]",
    "redup[lsh]",
    "redup[semantic]",
]
fast = ["xxhash>=3.0", "libcst>=1.0", "pybloom-live>=4.0"]
fuzzy = ["rapidfuzz>=3.0"]
ast = [
    "tree-sitter>=0.21",
    "tree-sitter-javascript>=0.20",
    "tree-sitter-typescript>=0.20", 
    "tree-sitter-go>=0.20",
    "tree-sitter-rust>=0.20",
    "tree-sitter-java>=0.20",
    "tree-sitter-c>=0.20",
    "tree-sitter-cpp>=0.20",
    "tree-sitter-html>=0.20",
    "tree-sitter-css>=0.20",
    "tree-sitter-sql>=0.20",
    "tree-sitter-json>=0.20",
    "tree-sitter-yaml>=0.20",
    "tree-sitter-toml>=0.20",
    "tree-sitter-xml>=0.20",
    "tree-sitter-markdown>=0.20",
    "tree-sitter-bash>=0.20",
    "tree-sitter-ruby>=0.20",
    "tree-sitter-php>=0.20",
    "tree-sitter-embedded-template>=0.20",
    "tree-sitter-regex>=0.20",
    "tree-sitter-scala>=0.20",
    "tree-sitter-kotlin>=0.20",
    "tree-sitter-swift>=0.20",
    "tree-sitter-objc>=0.20",
    "tree-sitter-c-sharp>=0.20",
    "tree-sitter-lua>=0.20",
    "tree-sitter-graphql>=0.20",
    "tree-sitter-dockerfile>=0.20",
    "tree-sitter-make>=0.20",
    "tree-sitter-vim>=0.20",
    "tree-sitter-nginx>=0.20",
    "tree-sitter-svelte>=0.20",
    "tree-sitter-vue>=0.20",
]
lsh = ["datasketch>=1.6"]
semantic = ["sentence-transformers>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
redup = "redup.cli_app.main:app"
redup-mcp = "redup.mcp_server:run_server"

[project.urls]
Homepage = "https://github.com/semcod/redup"
Repository = "https://github.com/semcod/redup"
Issues = "https://github.com/semcod/redup/issues"
Documentation = "https://github.com/semcod/redup#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
