[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redup"
version = "0.4.30"
description = "Code duplication analyzer and refactoring planner for LLMs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Tom Sapletta", email = "tom@sapletta.com" },
]
keywords = ["duplication", "refactoring", "code-analysis", "LLM", "AST", "static-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.12.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "tomli>=2.0; python_version<'3.11'",
    "python-dotenv>=1.0",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
]

[project.optional-dependencies]
all = [
    "redup[fast]",
    "redup[fuzzy]",
    "redup[ast]",
    "redup[lsh]",
    "redup[semantic]",
    "redup[intent]",
    "redup[compare]",
    "redup[tasks]",
]
tasks = ["planfile>=0.1.0"]
compare = ["networkx>=3.0"]
llm = ["litellm>=1.0"]
fast = ["xxhash>=3.0", "libcst>=1.0", "pybloom-live>=4.0"]
fuzzy = ["rapidfuzz>=3.0"]
ast = [
    "tree-sitter>=0.21",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "tree-sitter-c>=0.21.0",
    "tree-sitter-cpp>=0.21.0",
    "tree-sitter-c-sharp>=0.21.0",
    "tree-sitter-html>=0.19.0",
    "tree-sitter-css>=0.19.0",
    "tree-sitter-sql>=0.3.0",
    "tree-sitter-json>=0.21.0",
    "tree-sitter-yaml>=0.7.0",
    "tree-sitter-bash>=0.21.0",
    "tree-sitter-ruby>=0.21.0",
    "tree-sitter-php>=0.21.0",
    "tree-sitter-dockerfile>=0.2.0",
]
lsh = ["datasketch>=1.6"]
semantic = ["sentence-transformers>=2.0"]
intent = ["intract>=0.5.6"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "goal>=2.1.0",
    "costs>=0.1.20",
    "pfix>=0.1.60",
]

[project.scripts]
redup = "redup.cli_app.main:app"
redup-mcp = "redup.mcp_server:run_server"

[project.urls]
Homepage = "https://github.com/semcod/redup"
Repository = "https://github.com/semcod/redup"
Issues = "https://github.com/semcod/redup/issues"
Documentation = "https://github.com/semcod/redup#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
intract = { path = "../intract", editable = true }

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.pfix]
# Self-healing Python configuration
model = "openrouter/qwen/qwen3-coder-next"
auto_apply = true
auto_install_deps = true
auto_restart = false
max_retries = 3
create_backups = false
git_auto_commit = false

[tool.pfix.runtime_todo]
enabled = true
todo_file = "TODO.md"
min_severity = "low"
deduplicate = true

[tool.costs]
# AI Cost tracking configuration
badge = true
update_readme = true
readme_path = "README.md"
default_model = "openrouter/qwen/qwen3-coder-next"
analysis_mode = "byok"
full_history = true
max_commits = 500

# Cost thresholds for badge colors (USD)
badge_color_thresholds = { low = 1.0, medium = 5.0, high = 10.0, critical = 50.0 }
